--- a/trabalho/css/styles.css
+++ b/trabalho/css/styles.css
@@ -1,4 +1,4 @@
-/* styles.css */
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -93,7 +93,7 @@ form button:hover {
 .register a:hover {
     text-decoration: underline;
 }
-/* styles.css */
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -108,7 +108,7 @@ body {
     overflow: hidden;
 }
 
-/* Estilizando a imagem de fundo */
+
 .background-image {
     position: absolute;
     top: 0;
@@ -119,7 +119,7 @@ body {
     z-index: 1;
 }
 
-/* Criando a sobreposição */
+
 .overlay {
     position: absolute;
     top: 0;
@@ -127,7 +127,7 @@ body {
     width: 100%;
     height: 100%;
     z-index: 2;
-    background: rgba(0, 0, 0, 0.5); /* Adiciona um fundo escuro translúcido */
+    background: rgba(0, 0, 0, 0.5); 
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -136,7 +136,7 @@ body {
     box-sizing: border-box;
 }
 
-/* Estilizando o cabeçalho */
+
 .header {
     width: 100%;
     max-width: 800px;
@@ -168,7 +168,7 @@ body {
     text-decoration: underline;
 }
 
-/* Estilizando o conteúdo */
+
 .content {
     max-width: 800px;
     text-align: center;
@@ -190,7 +190,7 @@ body {
     color: #f4ece4;
 }
 
-/* Estilo responsivo */
+
 @media (max-width: 768px) {
     .header h1 {
         font-size: 1.5em;
@@ -227,7 +227,7 @@ a:hover {
     text-decoration: underline;
 }
 
-/* Estilo da página de login */
+
 .login-container, .history-container {
     display: flex;
     flex-direction: column;
@@ -246,7 +246,7 @@ a:hover {
     max-width: 400px;
 }
 
-/* Estilo da página de história */
+
 .header {
     background: #8b5e3c;
     color: #fff;
@@ -258,7 +258,7 @@ a:hover {
 }
 
 
-/* styles.css */
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -280,7 +280,7 @@ a:hover {
     text-decoration: underline;
 }
 
-/* Página de Registro */
+
 .register-container {
     display: flex;
     flex-direction: column;
